--- a/barick-tilefy-ts/barick-tilefy-ts.csproj
+++ b/barick-tilefy-ts/barick-tilefy-ts.csproj
@@ -114,9 +114,7 @@
       <DependentUpon>web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="js\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">12.0</VisualStudioVersion>
   </PropertyGroup>
